--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
 
-   <main>
+   <!-- <main> -->
     <section class="hero" id="home">
       <div class="container">
         <header>  
@@ -87,9 +87,7 @@
         <h2>We Provides best Features for customer</h2>
         <div class="features-wrapper">
           <figure>
-            <div class="img">
-              <img src="./svgs/fet-1.png" alt="" />
-            </div>
+            <img src="./svgs/fet-1.png" alt="" />
             <figcaption>
               <h3>Clean Code</h3>
               <p>Lorem ipsum dolor sit amet ecte adipiscing elitIpsum.</p>
@@ -97,9 +95,7 @@
           </figure>
 
           <figure>
-            <div class="img">
-              <img src="./svgs/fet-2.png" alt="" />
-            </div>
+            <img src="./svgs/fet-2.png" alt="" />
             <figcaption>
               <h3>Data Analytic</h3>
               <p>Lorem ipsum dolor sit amet ecte adipiscing elitIpsum.</p>
@@ -107,18 +103,14 @@
           </figure>
 
           <figure>
-            <div class="img">
-              <img src="./svgs/fet-3.png" alt="" />
-            </div>
+            <img src="./svgs/fet-3.png" alt="" />
             <figcaption>
               <h3>Fully Secured</h3>
               <p>Lorem ipsum dolor sit amet ecte adipiscing elitIpsum.</p>
             </figcaption>
           </figure>
           <figure>
-            <div class="img">
-              <img src="./svgs/fet-4.png" alt="" />
-            </div>
+            <img src="./svgs/fet-4.png" alt="" />
             <figcaption>
               <h3>24/7 Support</h3>
               <p>Lorem ipsum dolor sit amet ecte adipiscing elitIpsum.</p>
@@ -140,16 +132,14 @@
           <div class="card">
             <header>
               <h4>Start-up</h4>
-              <div>
-                <img src="./svgs/line.svg" alt="" />
-              </div>
+              <img src="./svgs/line.svg" alt="" />
               <h1 class="month-plan">
                 $10
                 <span>/mo</span>
               </h1>
               <h1 class="year-plan hide">
                 $100
-                <span>/year</span>
+                <span>/yr</span>
               </h1>
             </header>
             <div>
@@ -164,16 +154,14 @@
           <div class="card">
             <header>
               <h4>Classic</h4>
-              <div>
-                <img src="./svgs/line.svg" alt="" />
-              </div>
+              <img src="./svgs/line.svg" alt="" />
               <h1 class="month-plan">
                 $30
                 <span>/mo</span>
               </h1>
               <h1 class="year-plan hide">
                 $300
-                <span>/year</span>
+                <span>/yr</span>
               </h1>
             </header>
             <div>
@@ -188,16 +176,14 @@
           <div class="card">
             <header>
               <h4>Premium</h4>
-              <div>
-                <img src="./svgs/line.svg" alt="" />
-              </div>
+              <img src="./svgs/line.svg" alt="" />
               <h1 class="month-plan">
                 $49
                 <span>/mo</span>
               </h1>
               <h1 class="year-plan hide">
                 $490
-                <span>/year</span>
+                <span>/yr</span>
               </h1>
             </header>
             <div>
@@ -276,7 +262,7 @@
         </div>
       </div>
     </section>
-  </main>
+  <!-- </main> -->
 
     <footer data-aos="fade-up">
       <div class="container">
