--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
           <img src="./svgs/burger.svg" alt="" class="nav-icon burger" />
           <img src="./svgs/close.svg" alt="" class="nav-icon hide close" />
         </header>
+
         <div class="hero-wrapper">
           <div class="text" data-aos="slide-right">
             <h1>Codext one of the best system in <span>SAAS</span>.</h1>
@@ -121,6 +122,7 @@
     </section>
 
     <section class="pricing" id="pricing">
+      <div class="container">
         <div class="pricing-header">
           <h2>Choose your best pricing plan</h2>
             <h5 class="flex">
@@ -196,6 +198,7 @@
           </div>
         </div>
       </div>
+    </div>
     </section>
 
     <section class="review" id="review">
@@ -209,14 +212,13 @@
         </p>
       </header>
     </div>
+
       <div class="map">
-        <div><img src="./imgs/rev-1.png" alt="" /></div>
-        <div>
-          <img src="./imgs/rev-3.png" alt="" />
-        </div>
-        <div><img src="./imgs/rev-2.png" alt="" /></div>
-        <div><img src="./imgs/rev-4.png" alt="" /></div>
-        <div><img src="./imgs/rev-5.png" alt="" /></div>
+        <img src="./imgs/rev-1.png" alt="" />
+        <img src="./imgs/rev-3.png" alt="" />
+        <img src="./imgs/rev-2.png" alt="" />
+        <img src="./imgs/rev-4.png" alt="" />
+        <img src="./imgs/rev-5.png" alt="" />
       </div>
     </section>
 
@@ -225,9 +227,7 @@
         <h2>Lastest insights news</h2>
         <div class="wrapper">
           <figure>
-            <div class="img">
               <img src="./imgs/news-1.png" alt="" data-aos="fade-down-right" />
-            </div>
             <figcaption data-aos="fade-right">
               <h5>Our Creative Team</h5>
               <div class="spans">
@@ -243,9 +243,7 @@
           </figure>
 
           <figure>
-            <div class="img">
               <img src="./imgs/news-2.png" alt="" data-aos="fade-down-left" />
-            </div>
             <figcaption data-aos="fade-left">
               <h5>Create presentations</h5>
               <div class="spans">
