--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="icon" href="./imgs/logo.png">
-    <!-- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" /> -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <script src="jquery.js"></script>
     <script src="main.js"></script>
     <title>Codext</title>
@@ -83,8 +83,8 @@
       </div>
     </section>
 
-    <section class="features" id="services">
-      <div class="container" data-aos="slide-left">
+    <section class="features" id="services" data-aos="slide-left">
+      <div class="container" >
         <h2>We Provides best Features for customer</h2>
         <div class="features-wrapper">
           <figure>
@@ -121,7 +121,7 @@
       </div>
     </section>
 
-    <section class="pricing" id="pricing">
+    <section class="pricing" id="pricing" data-aos="slide-right">
       <div class="container">
         <div class="pricing-header">
           <h2>Choose your best pricing plan</h2>
@@ -130,8 +130,8 @@
               <div class="toggle"><span></span></div>
               <span class="yearly">Yearly</span>
           </div>
-        <div class="cards-wrapper">
-          <div class="card">
+        <div class="cards-wrapper" >
+          <div class="card" >
             <header>
               <h4>Start-up</h4>
               <img src="./svgs/line.svg" alt="" />
@@ -201,7 +201,7 @@
     </div>
     </section>
 
-    <section class="review" id="review">
+    <section class="review" id="review" data-aos="fade-down">
       <div class="container">
       <header>
         <h2>Let’s see our User’s Review</h2>
@@ -222,13 +222,13 @@
       </div>
     </section>
 
-    <section class="news" id="news">
+    <section class="news" id="news" data-aos="fade-up">
       <div class="container">
         <h2>Lastest insights news</h2>
         <div class="wrapper">
           <figure>
-              <img src="./imgs/news-1.png" alt="" data-aos="fade-down-right" />
-            <figcaption data-aos="fade-right">
+              <img src="./imgs/news-1.png" alt=""  />
+            <figcaption >
               <h5>Our Creative Team</h5>
               <div class="spans">
                 <span>17 June, 2021</span><span>by Stive Smithi</span>
@@ -243,8 +243,8 @@
           </figure>
 
           <figure>
-              <img src="./imgs/news-2.png" alt="" data-aos="fade-down-left" />
-            <figcaption data-aos="fade-left">
+              <img src="./imgs/news-2.png" alt=""  />
+            <figcaption >
               <h5>Create presentations</h5>
               <div class="spans">
                 <span>17 June, 2021</span> <span>by Thomas lews</span>
@@ -311,9 +311,9 @@
     </footer>
 
     <!-- AOS -->
-    <!-- <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init();
-    </script> -->
+    </script>
   </body>
 </html>
