--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="icon" href="./imgs/logo.png">
+    <link rel="icon" href="./imgs/logo.png" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <script src="jquery.js"></script>
     <script src="main.js"></script>
     <title>Codext</title>
   </head>
   <body>
-
-   <!-- <main> -->
+    <!-- <main> -->
     <section class="hero" id="home">
       <div class="container">
-        <header>  
+        <header>
           <img src="./imgs/logo.png" class="logo" alt="codext-logo" />
           <nav>
             <a href="#home">Home</a>
@@ -39,7 +38,12 @@
             </p>
             <button>Try A Live Demo</button>
           </div>
-          <img src="./imgs/hero.png" alt="" data-aos="zoom-in" class="hero-img"/>
+          <img
+            src="./imgs/hero.png"
+            alt=""
+            data-aos="zoom-in"
+            class="hero-img"
+          />
         </div>
       </div>
     </section>
@@ -84,7 +88,7 @@
     </section>
 
     <section class="features" id="services" data-aos="slide-left">
-      <div class="container" >
+      <div class="container">
         <h2>We Provides best Features for customer</h2>
         <div class="features-wrapper">
           <figure>
@@ -125,13 +129,15 @@
       <div class="container">
         <div class="pricing-header">
           <h2>Choose your best pricing plan</h2>
-            <h5 class="flex">
-              Added for <span class="monthly selected">Monthly</span>
-              <div class="toggle"><span></span></div>
-              <span class="yearly">Yearly</span>
-          </div>
-        <div class="cards-wrapper" >
-          <div class="card" >
+          <h5 class="flex">
+            Added for <span class="monthly selected">Monthly</span>
+            <span class="toggle"><span></span></span>
+            <span class="yearly">Yearly</span>
+          </h5>
+        </div>
+
+        <div class="cards-wrapper">
+          <div class="card">
             <header>
               <h4>Start-up</h4>
               <img src="./svgs/line.svg" alt="" />
@@ -198,20 +204,19 @@
           </div>
         </div>
       </div>
-    </div>
     </section>
 
     <section class="review" id="review" data-aos="fade-down">
       <div class="container">
-      <header>
-        <h2>Let’s see our User’s Review</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
-          scelerisque tellus interdum venenatis auctor et nibh. Rhoncus a, sed
-          lobortis nisi.
-        </p>
-      </header>
-    </div>
+        <header>
+          <h2>Let’s see our User’s Review</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
+            scelerisque tellus interdum venenatis auctor et nibh. Rhoncus a, sed
+            lobortis nisi.
+          </p>
+        </header>
+      </div>
 
       <div class="map">
         <img src="./imgs/rev-1.png" alt="" />
@@ -227,8 +232,8 @@
         <h2>Lastest insights news</h2>
         <div class="wrapper">
           <figure>
-              <img src="./imgs/news-1.png" alt=""  />
-            <figcaption >
+            <img src="./imgs/news-1.png" alt="" />
+            <figcaption>
               <h5>Our Creative Team</h5>
               <div class="spans">
                 <span>17 June, 2021</span><span>by Stive Smithi</span>
@@ -243,8 +248,8 @@
           </figure>
 
           <figure>
-              <img src="./imgs/news-2.png" alt=""  />
-            <figcaption >
+            <img src="./imgs/news-2.png" alt="" />
+            <figcaption>
               <h5>Create presentations</h5>
               <div class="spans">
                 <span>17 June, 2021</span> <span>by Thomas lews</span>
@@ -260,7 +265,7 @@
         </div>
       </div>
     </section>
-  <!-- </main> -->
+    <!-- </main> -->
 
     <footer data-aos="fade-up">
       <div class="container">
