--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="icon" href="./imgs/logo.png" />
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+   <!-- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" /> -->
     <script src="jquery.js"></script>
     <script src="main.js"></script>
     <title>Codext</title>
   </head>
   <body>
-    <!-- <main> -->
+   <main>
     <section class="hero" id="home">
       <div class="container">
         <header>
@@ -265,7 +265,7 @@
         </div>
       </div>
     </section>
-    <!-- </main> -->
+     </main> 
 
     <footer data-aos="fade-up">
       <div class="container">
@@ -315,10 +315,10 @@
       <p class="copy">Copyright 2023 The Codext All Rights Reserved.</p>
     </footer>
 
-    <!-- AOS -->
+    <!-- AOS
    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init();
-    </script> 
+    </script> -->
   </body>
 </html>
