--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
         <link rel="stylesheet" href="css/reset.css" />
         <link rel="stylesheet" href="css/style.css" />
         <link rel="icon" href="./imgs/logo.png" />
-        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+        <script src="https://cdn.jsdelivr.net/npm/aos@latest/dist/aos.js"></script>
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/aos@latest/dist/aos.css"
+        />
+
         <script src="jquery.js"></script>
         <script src="main.js"></script>
         <title>Codext</title>
