--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                         <button>TRY THIS PACKAGE</button>
                     </div>
 
-                    <div class="card">
+                    <div class="card best">
                         <header>
                             <h4>Classic</h4>
                             <img src="./svgs/line.svg" alt="" />
