--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
         <link rel="stylesheet" href="css/reset.css" />
         <link rel="stylesheet" href="css/style.css" />
         <link rel="icon" href="./imgs/logo.png" />
-        <!-- <script src="https://cdn.jsdelivr.net/npm/aos@latest/dist/aos.js"></script>
         <link
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/aos@latest/dist/aos.css"
-        /> -->
+        />
 
         <script src="jquery.js"></script>
         <script src="main.js"></script>
@@ -347,8 +346,9 @@
             <p class="copy">Copyright 2023 The Codext All Rights Reserved.</p>
         </footer>
 
-        <!-- <script>
+        <script src="https://cdn.jsdelivr.net/npm/aos@latest/dist/aos.js"></script>
+        <script>
             AOS.init();
-        </script> -->
+        </script>
     </body>
 </html>
