--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="Landing page for a SASS" />
         <link rel="stylesheet" href="css/reset.css" />
         <link rel="stylesheet" href="css/style.css" />
-        <link rel="icon" href="./imgs/logo.png" />
+        <link rel="icon" href="./imgs/logo.webp" />
         <link
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/aos@latest/dist/aos.css"
@@ -21,7 +22,7 @@
                 <div class="container">
                     <header>
                         <img
-                            src="./imgs/logo.png"
+                            src="./imgs/logo.webp"
                             class="logo"
                             alt="codext-logo"
                         />
@@ -59,7 +60,7 @@
                             <button>Try A Live Demo</button>
                         </div>
                         <img
-                            src="./imgs/hero.png"
+                            src="./imgs/hero.webp"
                             alt=""
                             data-aos="zoom-in"
                             class="hero-img"
@@ -71,8 +72,8 @@
             <section class="preview">
                 <div class="container">
                     <div class="images">
-                        <img src="./imgs/vector.png" alt="" class="vector" />
-                        <img src="./imgs/preview.png" alt="preview-img" />
+                        <img src="./imgs/vector.webp" alt="" class="vector" />
+                        <img src="./imgs/preview.webp" alt="preview-img" />
                     </div>
                     <div data-aos="slide-left" class="text">
                         <h2>It’s very helpful for operating system</h2>
@@ -115,7 +116,7 @@
                     <h2>We Provides best Features for customer</h2>
                     <div class="features-wrapper">
                         <figure>
-                            <img src="./svgs/fet-1.png" alt="" />
+                            <img src="./svgs/fet-1.webp" alt="" />
                             <figcaption>
                                 <h3>Clean Code</h3>
                                 <p>
@@ -126,7 +127,7 @@
                         </figure>
 
                         <figure>
-                            <img src="./svgs/fet-2.png" alt="" />
+                            <img src="./svgs/fet-2.webp" alt="" />
                             <figcaption>
                                 <h3>Data Analytic</h3>
                                 <p>
@@ -137,7 +138,7 @@
                         </figure>
 
                         <figure>
-                            <img src="./svgs/fet-3.png" alt="" />
+                            <img src="./svgs/fet-3.webp" alt="" />
                             <figcaption>
                                 <h3>Fully Secured</h3>
                                 <p>
@@ -147,7 +148,7 @@
                             </figcaption>
                         </figure>
                         <figure>
-                            <img src="./svgs/fet-4.png" alt="" />
+                            <img src="./svgs/fet-4.webp" alt="" />
                             <figcaption>
                                 <h3>24/7 Support</h3>
                                 <p>
@@ -255,11 +256,11 @@
                 </div>
 
                 <div class="map">
-                    <img src="./imgs/rev-1.png" alt="" />
-                    <img src="./imgs/rev-3.png" alt="" />
-                    <img src="./imgs/rev-2.png" alt="" />
-                    <img src="./imgs/rev-4.png" alt="" />
-                    <img src="./imgs/rev-5.png" alt="" />
+                    <img src="./imgs/rev-1.webp" alt="" />
+                    <img src="./imgs/rev-3.webp" alt="" />
+                    <img src="./imgs/rev-2.webp" alt="" />
+                    <img src="./imgs/rev-4.webp" alt="" />
+                    <img src="./imgs/rev-5.webp" alt="" />
                 </div>
             </section>
 
@@ -268,7 +269,7 @@
                     <h2>Lastest insights news</h2>
                     <div class="wrapper">
                         <figure>
-                            <img src="./imgs/news-1.png" alt="" />
+                            <img src="./imgs/news-1.webp" alt="" />
                             <figcaption>
                                 <h5>Our Creative Team</h5>
                                 <div class="spans">
@@ -286,7 +287,7 @@
                         </figure>
 
                         <figure>
-                            <img src="./imgs/news-2.png" alt="" />
+                            <img src="./imgs/news-2.webp" alt="" />
                             <figcaption>
                                 <h5>Create presentations</h5>
                                 <div class="spans">
@@ -311,7 +312,7 @@
             <div class="container">
                 <div class="col">
                     <div class="img">
-                        <img src="./imgs/logo.png" alt="logo" />
+                        <img src="./imgs/logo.webp" alt="logo" />
                     </div>
                     <p>
                         Lorem ipsum dolor sit amet, consect etur adipiscing
@@ -319,10 +320,10 @@
                         faucibus.
                     </p>
                     <div class="social">
-                        <img src="./svgs/tw.png" alt="" />
-                        <img src="./svgs/fb.png" alt="" />
-                        <img src="./svgs/insta.png" alt="" />
-                        <img src="./svgs/in.png" alt="" />
+                        <img src="./svgs/tw.webp" alt="" />
+                        <img src="./svgs/fb.webp" alt="" />
+                        <img src="./svgs/insta.webp" alt="" />
+                        <img src="./svgs/in.webp" alt="" />
                     </div>
                 </div>
 
